test: 添加前后端单元测试并修复编译问题
- 新增 vitest 配置、测试依赖及 StatusTag、utils 等前端测试用例
- 新增后端 AuditLogAspect、DefaultAuditLogService、Result 单元测试
- 修复 Result.ok() 为 Result.success()、常量引用、JWT API 升级等编译错误
- 移除 flyway-database-postgresql 依赖，补充 lombok 及测试依赖